# Mi-Crow

./: .gitignore  404.html  README.md  coverage.json  index.html  mkdocs.yml  objects.inv  pyproject.toml  sae_mps_pipeline.py  sitemap.xml  test_coverage_analysis_report.md
api/: index.html
examples/: 01_train_sae_model.ipynb  02_attach_sae_and_save_texts.ipynb  03_load_and_manipulate_concepts.ipynb  03_load_concepts.ipynb  04_save_inputs_and_outputs.ipynb  05_special_token_mask.ipynb  05_special_token_mask_debug.ipynb  06_save_activations_with_attention_masks.ipynb  07_save_activations_and_attention_masks.ipynb  08_inference_with_hooks.ipynb  09_activations_two_modes.ipynb  README.md
experiments/: 01_train_LPM.ipynb  02_test_LPM.ipynb  __init__.py  index.html
guide/: index.html
playground/: attach_sae.ipynb  initialize_bielik_memory_optimized.ipynb  load_models.ipynb  sae_mps_pipeline.py  save_activations.ipynb  train_sae.ipynb  train_sae.py
presentations/: README.md  compile_to_pdf.py  compile_to_pdf.sh  presentation_1 copy.md  presentation_1.md  template_example.md
search/: search_index.json
site/: 404.html  index.html  objects.inv  sitemap.xml
slurm/: array_save_activations.sh  array_save_activations_lminus2.sh  array_save_activations_prefixed.sh  new_prepare_datasets.sh  prepare_datasets.sh  run_baseline_guards_cpu.sh  run_baseline_guards_gpu.sh  run_debug_bielik_padding_cpu.sh  run_debug_llama_chat_template_cpu.sh  run_direct_prompting.sh  run_direct_prompting_cpu.sh  run_lpm_baseline_benchmark.sh  run_lpm_experiment_baseline_benchmark.sh  (+10 more)
(+630 files in other folders)
